# buisciii-tools

./: CHANGELOG.md  MANIFEST.in  README.md  deliver_automatization.json  environment.yml  pyproject.toml  requirements.txt  setup.py  tatus  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  python_lint.yml
.github/workflows/: PULL_REQUEST_TEMPLATE.md  pypi_publish.yml  python_lint.yml  update_branches.yml
SRVCNM564_20220224_TESTINGBUISCIIITOOLS_smonzon_S/ANALYSIS/: samples_id.txt
bu_isciii/: __init__.py  __main__.py  archive.py  autoclean_sftp.py  bioinfo_doc.py  clean.py  config_json.py  copy_sftp.ipynb  copy_sftp.py  deliver.py  deliver_automatization.js  drylab_api.py  json_reader.py  list.py  new_service.py  scratch.py  service_json.py  sftp_autoclean.py  utils.py
bu_isciii/assets/reports/md/: IRMA.md  mag.md  plasmidid.md  rnaseq.md  rnaseq_deg.md  sarek.md  viralrecon.md  wgmlst_chewbbaca.md
bu_isciii/assets/reports/results/: assembly.md  exomeeb.md  irma_output.md  mag.md  pikavirus.md  rnaseq.md  rnaseq_deg.md  taxprofiler.md  trios.md  viralrecon.md  wgmlst_chewbbaca.md
bu_isciii/conf/: configuration.json  configuration_dev.json
bu_isciii/schemas/: deliver_automatization.json  schema_sftp_copy  schema_sftp_copy.json
bu_isciii/templates/: email.j2  html_service_template.html  jinja_template  jinja_template.j2  jinja_template_delivery.j2  jinja_template_service_info.j2  services.json  sftp_user.json
bu_isciii/templates/IRMA/ANALYSIS/: lablog_irma
bu_isciii/templates/IRMA/DOC/: irma_config.sh
bu_isciii/templates/IRMA/RESULTS/: irma_results  lablog  lablog_irma_results
bu_isciii/templates/MTBseq_Assembly/DOC/: hpc_slurm_assembly.config
bu_isciii/templates/assembly/ANALYSIS/: lablog  lablog_assembly
bu_isciii/templates/blast_nt/DOC/: README
buisciii/: __init__.py  __main__.py  archive.py  autoclean_sftp.py  bioinfo_doc.py  clean.py  config_json.py  copy_sftp.py  drylab_api.py  list.py  new_service.py  scratch.py  service_json.py  utils.py
buisciii/assets/outbreakinfo/: get_mutations_outbreak_info.R  lablog  update_lineage_data.py
buisciii/assets/utils/: lablog_SRA_download
buisciii/conf/: configuration.json  configuration_dev.json
buisciii/schemas/: deliver_automatization.json
buisciii/templates/: email.j2  jinja_template_service_info.j2  services.json  sftp_user.json
documents/: hackaton_dia1.md
templates/: cleaning.py  services.json  services_templates.json
templates/assembly/ANALYSIS/: lablog
templates/viralrecon/ANALYSIS/: lablog
templates/viralrecon/DOC/: README
workdir/: buisciii_tools_list.py  pipelines.json
(+512 files in other folders)
